# gyml

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
gyaml/: __init__.py  errors.py  lexer.py  parser.py  tokens.py  values.py
gyml/: __init__.py  __main__.py  errors.py  lexer.py  parser.py  values.py
tests/: conftest.py  test_document.py  test_indentation.py  test_integration.py  test_keys.py  test_mappings.py  test_scalars.py  test_sequences.py
